# PyTexTable

./: LICENCE  README.md  pyproject.toml  setup.py
.github/workflows/: autopep8.yml
docs/: documentation.md
examples/: examples.md
pytextable/generator/: generate_latex_table.py  insert_table.py
pytextable/utils/: parse_csv.py  parse_dataframe.py  parse_dict.py
